--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,20 @@
+.top-image {
+  display: inline-block;
+  margin: -20% 0 0 3%;
+}
+
+.separate {
+  border-top: 0.1px solid black;
+  position: -webkit-sticky;
+  position: sticky;
+  margin-left: 2%;
+  top: 2vh;
+}
+
+section {
+  margin: 10%;
+}
+
 * {
   text-decoration: none;
   list-style: none;
@@ -9,24 +26,66 @@
 }
 
 .header {
+  position: relative;
+  pointer-events: none;
   margin: 3%;
   margin-bottom: 20%;
-  width: 100%;
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 4fr 1fr;
-      grid-template-columns: 4fr 1fr;
-  grid-auto-rows: 10vh;
+  gap: 10px;
+  -ms-grid-columns: 3fr 1fr;
+      grid-template-columns: 3fr 1fr;
+}
+
+.header:hover {
+  background: black;
+  color: white;
+}
+
+@media (max-width: 800px) {
+  .header {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+  }
+}
+
+@media (max-width: 400px) {
+  .header {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+  }
 }
 
 .header .logo {
-  font-size: 3rem;
+  font-size: 5rem;
+}
+
+.header .nav {
+  margin-top: 5%;
 }
 
 .header .nav__list__item {
   font-size: 1.5rem;
   margin: 2%;
   display: inline-block;
+  pointer-events: auto;
+}
+
+.header .nav__list__item:hover > * {
+  background: black;
+  color: white;
+  margin: 10%;
+  -webkit-transition: color 0.5s, margin 1s;
+  transition: color 0.5s, margin 1s;
+}
+
+.header::after {
+  position: absolute;
+  content: " ";
+  border-bottom: 1px solid white;
+  top: 50%;
+  right: 0;
+  left: 0;
 }
 
 .main {
@@ -35,13 +94,62 @@
 }
 
 .main .title {
-  text-align: center;
+  margin: 5% 0 5% 5%;
+  font-size: 3rem;
 }
 
 .main .title::before {
   content: " ";
   border: solid;
-  padding: 1%;
+  margin-right: 2%;
+  padding: 1% 1.2% 0 2.4%;
+}
+
+.main .works {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (36%)[3];
+      grid-template-columns: repeat(3, 36%);
+}
+
+.main .works__item {
+  padding: 0 5%;
+}
+
+.main .about__title {
+  font-size: 2rem;
+  border-left: 0.1px solid black;
+  padding: 2%;
+  margin: 5% 0 5% 0;
+}
+
+.main .about .me {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[3];
+      grid-template-columns: repeat(3, 1fr);
+}
+
+.main .about .skill {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[3];
+      grid-template-columns: repeat(3, 1fr);
+}
+
+.main .contact__text {
+  font-size: 1.5rem;
+}
+
+.main .contact__form {
+  margin: 2%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .footer {
@@ -56,10 +164,6 @@
   font-size: 1.5rem;
   margin: 2%;
   display: inline-block;
-}
-
-.footer .nav::before {
-  content: "";
 }
 
 .footer .copy {
