--- a/css/style.css
+++ b/css/style.css
@@ -30,11 +30,6 @@ section {
   pointer-events: none;
   margin: 3%;
   margin-bottom: 20%;
-  display: -ms-grid;
-  display: grid;
-  gap: 10px;
-  -ms-grid-columns: 3fr 1fr;
-      grid-template-columns: 3fr 1fr;
 }
 
 .header:hover {
@@ -42,17 +37,13 @@ section {
   color: white;
 }
 
-@media (max-width: 800px) {
+@media screen and (min-width: 1200px) {
   .header {
-    -ms-grid-columns: 1fr;
-        grid-template-columns: 1fr;
-  }
-}
-
-@media (max-width: 400px) {
-  .header {
-    -ms-grid-columns: 1fr;
-        grid-template-columns: 1fr;
+    display: -ms-grid;
+    display: grid;
+    gap: 10px;
+    -ms-grid-columns: 4fr 1fr;
+        grid-template-columns: 4fr 1fr;
   }
 }
 
@@ -116,25 +107,12 @@ section {
   padding: 0 5%;
 }
 
-.main .about__title {
-  font-size: 2rem;
-  border-left: 0.1px solid black;
-  padding: 2%;
-  margin: 5% 0 5% 0;
+.main .works__item:hover {
+  opacity: 0.8;
 }
 
-.main .about .me {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: (1fr)[3];
-      grid-template-columns: repeat(3, 1fr);
-}
-
-.main .about .skill {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: (1fr)[3];
-      grid-template-columns: repeat(3, 1fr);
+.main .works__item__text {
+  text-align: center;
 }
 
 .main .contact__text {
