--- a/css/style.css
+++ b/css/style.css
@@ -1,219 +1,420 @@
-.top-image {
-  display: inline-block;
-  margin: -20% 0 0 3%;
+body {
+  font-family: "Lato","Helvetica Neue",Arial,"Hiragino Kaku Gothic ProN","Hiragino Sans",Meiryo,sans-serif;
+  font-size: 14px;
+  line-height: 1.8;
+  letter-spacing: .8px;
+  color: #333;
 }
 
-.separate {
-  border-top: 0.1px solid black;
-  position: -webkit-sticky;
-  position: sticky;
-  margin-left: 2%;
-  top: 2vh;
-}
-
-section {
-  margin: 10%;
-}
-
-* {
+a {
+  transition: opacity .3s;
   text-decoration: none;
+  color: #1ca9e3;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+  vertical-align: bottom;
+  border-style: none;
+}
+
+ul,
+li {
   list-style: none;
-  color: black;
 }
 
-.wrapper {
-  margin: 2%;
+.pc-only {
+  display: block;
 }
 
+.sp-only {
+  display: none;
+}
+
+/*--------------------------------
+ レイアウト
+---------------------------------*/
+.section {
+  padding: 80px 0;
+}
+
+.inner {
+  max-width: 1340px;
+  margin: 0 auto;
+  padding: 0 40px;
+}
+
+/*--------------------------------
+ 見出し
+---------------------------------*/
+.title {
+  font-size: 34px;
+  font-weight: normal;
+  line-height: 1;
+  margin-bottom: 40px;
+  text-align: center;
+  letter-spacing: .05em;
+  color: #141263;
+}
+
+.lead {
+  margin-bottom: 30px;
+  text-align: center;
+}
+
+/*--------------------------------
+ヘッダー
+---------------------------------*/
 .header {
-  position: relative;
-  pointer-events: none;
-  margin: 3%;
-  margin-bottom: 20%;
+  position: fixed;
+  top: 0;
+  z-index: 1;
+  width: 100%;
+  transition: background-color .5s;
 }
 
-.header:hover {
-  background: black;
-  color: white;
+.header.active {
+  background-color: rgb(141, 133, 133);
 }
 
-@media screen and (min-width: 1200px) {
-  .header {
-    display: -ms-grid;
-    display: grid;
-    gap: 10px;
-    -ms-grid-columns: 4fr 1fr;
-        grid-template-columns: 4fr 1fr;
-  }
-}
-
-.header .logo {
-  font-size: 5rem;
-}
-
-.header .nav {
-  margin-top: 5%;
-}
-
-.header .nav__list__item {
-  font-size: 1.5rem;
-  margin: 2%;
-  display: inline-block;
-  pointer-events: auto;
-}
-
-.header .nav__list__item:hover > * {
-  background: black;
-  color: white;
-  margin: 10%;
-  -webkit-transition: color 0.5s, margin 1s;
-  transition: color 0.5s, margin 1s;
-}
-
-.header::after {
-  position: absolute;
-  content: " ";
-  border-bottom: 1px solid white;
-  top: 50%;
-  right: 0;
-  left: 0;
-}
-
-.main {
-  margin: 3%;
-  margin-bottom: 20%;
-}
-
-.main .title {
-  margin: 5% 0 5% 5%;
-  font-size: 3rem;
-}
-
-.main .title::before {
-  content: " ";
-  border: solid;
-  margin-right: 2%;
-  padding: 1% 1.2% 0 2.4%;
-}
-
-.main .works {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: (33%)[3];
-      grid-template-columns: repeat(3, 33%);
-}
-
-.main .works__item {
-  padding: 0 5%;
-}
-
-.main .works__item:hover {
-  opacity: 0.8;
-}
-
-.main .works__item__text {
-  text-align: center;
-}
-
-.main .about__me {
-  display: -ms-grid;
-  display: grid;
-  gap: 2%;
-}
-
-@media screen and (min-width: 400px) {
-  .main .about__me {
-    -ms-grid-columns: (1fr)[1];
-        grid-template-columns: repeat(1, 1fr);
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .main .about__me {
-    -ms-grid-columns: (1fr)[2];
-        grid-template-columns: repeat(2, 1fr);
-  }
-}
-
-@media screen and (min-width: 1000px) {
-  .main .about__me {
-    -ms-grid-columns: (1fr)[2];
-        grid-template-columns: repeat(2, 1fr);
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .main .about__me {
-    -ms-grid-columns: (1fr)[3];
-        grid-template-columns: repeat(3, 1fr);
-  }
-}
-
-.main .about__skill {
-  margin: 3%;
-  margin-top: 10%;
-  display: -ms-grid;
-  display: grid;
-}
-
-@media screen and (min-width: 400px) {
-  .main .about__skill {
-    -ms-grid-columns: (1fr)[2];
-        grid-template-columns: repeat(2, 1fr);
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .main .about__skill {
-    -ms-grid-columns: (1fr)[2];
-        grid-template-columns: repeat(2, 1fr);
-  }
-}
-
-@media screen and (min-width: 1000px) {
-  .main .about__skill {
-    -ms-grid-columns: (1fr)[2];
-        grid-template-columns: repeat(2, 1fr);
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .main .about__skill {
-    -ms-grid-columns: (1fr)[3];
-        grid-template-columns: repeat(3, 1fr);
-  }
-}
-
-.main .contact__text {
-  font-size: 1.5rem;
-}
-
-.main .contact__form {
-  margin: 2%;
-  display: -webkit-box;
-  display: -ms-flexbox;
+.header-inner {
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  padding: 15px 20px;
 }
 
-.footer {
-  margin: 3%;
-  margin-bottom: 0;
-  display: -ms-grid;
-  display: grid;
+.header-logo {
+  font-size: 20px;
+  font-weight: normal;
+  line-height: 1.2;
+  margin-right: 20px;
+  letter-spacing: .05em;
 }
 
-.footer .nav {
-  text-align: right;
-  font-size: 1.5rem;
-  margin: 2%;
-  display: inline-block;
+.header-logo a {
+  color: #fff;
 }
 
-.footer .copy {
+.header-nav-list {
+  display: flex;
+  justify-content: space-between;
+}
+
+.header-nav-item:not(:last-child) {
+  margin-right: 20px;
+}
+
+.header-nav-item a {
+  font-size: 13px;
+  padding: 5px 30px 0 0;
+  letter-spacing: .2em;
+  color: #fff;
+}
+
+.header-nav-item a:hover {
+  opacity: .8;
+}
+
+/*--------------------------------
+ メインビジュアル
+---------------------------------*/
+.main-visual-img {
+  height: 700px;
+  background-image: url(../img/mv.jpg);
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+}
+
+.sub-main-visual-img {
+  height: 180px;
+  background-image: url(../img/mv.jpg);
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+}
+
+/*--------------------------------
+ プロフィール
+---------------------------------*/
+.service {
+  padding: 50px 0;
+}
+
+.service-title {
+  font-size: 35px;
+  margin-bottom: 20px;
+  text-align: center;
+  color: #141263;
+}
+
+.service-text {
+  max-width: 500px;
+  margin: 0 auto;
+}
+
+/*--------------------------------
+ Works
+---------------------------------*/
+.works-list {
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: -40px;
+}
+
+.works-item {
+  width: 31.74603%;
+  margin-right: 1.58730%;
+  margin-bottom: 40px;
+  color: #333;
+}
+
+.works-item:hover {
+  opacity: .9;
+}
+
+.works-item:nth-of-type(3n) {
+  margin-right: 0;
+}
+
+.works-img img {
+  border: 1px solid #e6e6e6;
+}
+
+.works-name {
+  font-size: 12px;
+  font-weight: bold;
+  margin-top: 8px;
+}
+
+.works-info {
+  font-size: 10px;
+}
+
+/*--------------------------------
+ Skill
+---------------------------------*/
+.skill-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin-bottom: -50px;
+}
+
+.skill-item {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  width: 48%;
+  margin-bottom: 50px;
+}
+
+.skill-img {
+  width: 60px;
+  height: auto;
+  margin-right: 20px;
+}
+
+.skill-body {
+  flex: 1;
+}
+
+.skill-name {
+  margin-bottom: 3px;
+}
+
+/*--------------------------------
+ Contact
+---------------------------------*/
+.contact-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.contact-item {
+  display: block;
+  margin: 0 20px;
   text-align: center;
 }
-/*# sourceMappingURL=style.css.map */
+
+.contact-text {
+  margin-top: 10px;
+  text-align: center;
+}
+/*--------------------------------
+ ページトップ
+---------------------------------*/
+.page-top {
+  font-weight: bold;
+  padding: 10px;
+  cursor: pointer;
+  text-align: center;
+  background-color: #e6e6e6;
+}
+
+.page-top .material-icons-outlined {
+  vertical-align: bottom;
+}
+
+/*--------------------------------
+ フッター
+---------------------------------*/
+.footer {
+  padding: 30px;
+  background-color: rgb(141, 133, 133);
+}
+
+.copyright {
+  font-size: 10px;
+  text-align: center;
+  color: white;
+}
+
+/*--------------------------------
+ 下層：Worksページ
+---------------------------------*/
+.article {
+  padding: 50px 0;
+}
+
+.article-inner {
+  max-width: 1040px;
+  margin: 0 auto;
+  padding: 0 20px;
+}
+
+.article-title {
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+.article-img {
+  margin-bottom: 20px;
+}
+
+.article-body {
+  max-width: 720px;
+  margin: 0 auto;
+}
+
+.article-info-title {
+  font-size: 15px;
+}
+
+.article-body img {
+  margin-bottom: 30px;
+}
+
+.article-body p {
+  margin-bottom: 30px;
+}
+
+.home-link {
+  text-align: center;
+}
+
+/*media Queries 767
+----------------------------------------------------*/
+@media screen and (max-width: 767px) {
+  body {
+    font-size: 13px;
+    line-height: 1.7;
+  }
+
+  .pc-only {
+    display: none;
+  }
+
+  .sp-only {
+    display: block;
+  }
+
+  /* 見出し */
+  .title {
+    font-size: 26px;
+    margin-bottom: 20px;
+  }
+
+  /* レイアウト */
+  .section {
+    padding: 40px 0;
+  }
+
+  .inner {
+    padding: 0 15px;
+  }
+
+  /* ヘッダー */
+  .header-logo {
+    font-size: 16px;
+  }
+
+  .header-nav-item:not(:last-child) {
+    margin-right: 10px;
+  }
+
+  .header-nav-item a {
+    font-size: 12px;
+  }
+
+  /* メインビジュアル */
+  .main-visual-img {
+    height: 60vh;
+    background-image: url(../img/sp_mv.jpg);
+  }
+  .sub-main-visual-img {
+    height: 100px;
+    background-image: url(../img/sp_mv.jpg);
+  }
+
+  /* プロフィール */
+  .profile {
+    padding: 30px 0;
+  }
+  .profile-title {
+    font-size: 20px;
+  }
+
+  /* Works */
+  .works-name {
+    font-size: 10px;
+  }
+
+  .works-list {
+    justify-content: space-between;
+  }
+
+  .works-item {
+    flex: 0 0 48%;
+    margin-right: 0;
+    margin-bottom: 30px;
+  }
+
+  /* Skill */
+  .skill-list {
+    display: block;
+    margin-bottom: 0;
+  }
+
+  .skill-item {
+    width: 100%;
+    margin-bottom: 35px;
+  }
+
+  .skill-item:last-child {
+    margin-bottom: 0;
+  }
+
+  /* Contact */
+  .contact-item {
+    margin: 0 10px;
+  }
+
+  /* フッター */
+  .footer {
+    padding: 20px 0;
+  }
+}
